--- a/boston_housing.ipynb
+++ b/boston_housing.ipynb
@@ -8,7 +8,7 @@
     "## Model Evaluation & Validation\n",
     "## Project: Predicting Boston Housing Prices\n",
     "\n",
-    "Welcome to the first project of the Machine Learning Engineer Nanodegree! In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. You will not need to modify the included code beyond what is requested. Sections that begin with **'Implementation'** in the header indicate that the following block of code will require additional functionality which you must provide. Instructions will be provided for each section and the specifics of the implementation are marked in the code block with a 'TODO' statement. Please be sure to read the instructions carefully!\n",
+    "Welcome to the first project of the Machine Learning Engineer Nanodegree! In this notebook, some template code has already been provided for you, and you will need to implement additional functionality to successfully complete this project. You will not need to modify the included code beyond what is requested. Sections that begin with **'Implementation'** in the header indicate that the following block of code will require additional functionality which you must provide.\n",
     "\n",
     "In addition to implementing code, there will be questions that you must answer which relate to the project and your implementation. Each section where you will answer a question is preceded by a **'Question X'** header. Carefully read each question and provide thorough answers in the following text boxes that begin with **'Answer:'**. Your project submission will be evaluated based on your answers to each of the questions and the implementation you provide.  \n",
     "\n",
@@ -123,19 +123,19 @@
     }
    ],
    "source": [
-    "# TODO: Minimum price of the data\n",
+ Minimum price of the data\n",
     "minimum_price = np.min(prices)\n",
     "\n",
-    "# TODO: Maximum price of the data\n",
+ Maximum price of the data\n",
     "maximum_price = np.max(prices)\n",
     "\n",
-    "# TODO: Mean price of the data\n",
+ Mean price of the data\n",
     "mean_price = np.mean(prices)\n",
     "\n",
-    "# TODO: Median price of the data\n",
+ Median price of the data\n",
     "median_price = np.median(prices)\n",
     "\n",
-    "# TODO: Standard deviation of prices of the data\n",
+ Standard deviation of prices of the data\n",
     "std_price = np.std(prices)\n",
     "\n",
     "# Show the calculated statistics\n",
@@ -214,7 +214,7 @@
     "    \"\"\" Calculates and returns the performance score between \n",
     "        true and predicted values based on the metric chosen. \"\"\"\n",
     "    \n",
-    "    # TODO: Calculate the performance score between 'y_true' and 'y_predict'\n",
+ Calculate the performance score between 'y_true' and 'y_predict'\n",
     "    score = r2_score(y_true, y_predict)\n",
     "    \n",
     "    # Return the score\n",
@@ -314,7 +314,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# TODO: Shuffle and split the data into training and testing subsets\n",
+ Shuffle and split the data into training and testing subsets\n",
     "X_train, X_test, y_train, y_test = train_test_split(features, prices, test_size=0.2, random_state=39)\n",
     "\n",
     "# Success\n",
@@ -563,7 +563,7 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Import X'make_scorer', X 'DecisionTreeRegressor', and X'GridSearchCV'\n",
+ Import X'make_scorer', X 'DecisionTreeRegressor', and X'GridSearchCV'\n",
     "from sklearn.metrics import make_scorer\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.model_selection import GridSearchCV\n",
@@ -577,16 +577,16 @@
     "    # sklearn versiin 0.17: ShuffleSplit(n, n_iter=10, test_size=0.1, train_size=None, random_state=None)\n",
     "    cv_sets = ShuffleSplit(X.shape[0], n_iter = 10, test_size = 0.20, random_state = 0)\n",
     "\n",
-    "    # TODO: Create a decision tree regressor object\n",
+ Create a decision tree regressor object\n",
     "    regressor = DecisionTreeRegressor(random_state=0)\n",
     "\n",
-    "    # TODO: Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
+ Create a dictionary for the parameter 'max_depth' with a range from 1 to 10\n",
     "    params = {'max_depth': range(1, 11)}\n",
     "\n",
-    "    # TODO: Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
+ Transform 'performance_metric' into a scoring function using 'make_scorer' \n",
     "    scoring_fnc = make_scorer(performance_metric)\n",
     "\n",
-    "    # TODO: Create the grid search cv object --> GridSearchCV()\n",
+ Create the grid search cv object --> GridSearchCV()\n",
     "    # Make sure to include the right parameters in the object:\n",
     "    # (estimator, param_grid, scoring, cv) which have values 'regressor', 'params', 'scoring_fnc', and 'cv_sets' respectively.\n",
     "    grid = GridSearchCV(regressor, params, scoring=scoring_fnc, cv=cv_sets)\n",
